change html structure of nav

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -164,4 +164,8 @@ h6 {
   background-color: rgba(255, 69, 0, 0.5);
 }
 
+.nav {
+  background-color: greenyellow;
+}
+
 /*# sourceMappingURL=main.css.map */
