--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,6 +61,17 @@ ORDER: base + typography > general layout + grid > page layout > components
   }
 }
 
+.btn {
+  color: #FFFFFF;
+  font: "Nunito", serif;
+  font-size: clamp(1.6rem, 6vw, 1.8rem);
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-weight: 700;
+  letter-spacing: 1px;
+  text-shadow: 1px 1px 2px #2f3e46;
+}
+
 .logoText {
   line-height: 1.1;
 }
@@ -72,8 +83,17 @@ ORDER: base + typography > general layout + grid > page layout > components
   font-style: normal;
   font-weight: 900;
 }
+.logoText--headingHero {
+  font-size: clamp(2.8rem, 5vw, 3rem);
+  text-align: center;
+  text-shadow: 2px 2px 1px #2f3e46;
+}
 .logoText--headingGreen {
   color: #4CAF50;
+}
+.logoText--headingGreenHero {
+  color: #4CAF50;
+  font-size: clamp(3.2rem, 5vw, 3.4rem);
 }
 .logoText--slogan {
   color: rgba(47, 62, 70, 0.65);
@@ -82,6 +102,19 @@ ORDER: base + typography > general layout + grid > page layout > components
   font-style: normal;
   font-weight: 400;
   line-height: 1.2;
+}
+.logoText--sloganHero {
+  color: rgba(255, 255, 255, 0.85);
+  font-size: clamp(2rem, 4vw, 2.2rem);
+  text-align: center;
+  text-shadow: 1px 1px 1px #2f3e46;
+}
+
+.hero__intro {
+  color: rgba(255, 255, 255, 0.85);
+  font-size: clamp(1.4rem, 5vw, 1.6rem);
+  text-align: center;
+  text-shadow: 1px 1px 1px #2f3e46;
 }
 
 *,
@@ -197,14 +230,163 @@ h6 {
   transition: outline 0.2s ease-in-out;
 }
 
+.btn--hero {
+  display: inline-block;
+  background-color: #4CAF50;
+  border-radius: 0.6rem;
+  box-shadow: 0px 0px 6px 3px rgba(47, 62, 70, 0.45);
+  margin-top: 1rem;
+  padding: 0.5em 2em;
+  transition: all 0.3s;
+}
+.btn--hero:hover {
+  background-color: #ff4800;
+}
+
+.hero {
+  /* Progress Indicator */
+}
+.hero__slider {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.hero__slide {
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  position: absolute;
+  transition: opacity 2s ease-in-out;
+}
+.hero__slide:nth-child(1) {
+  background-image: url("../../public/img/slider/GRPhoto1.webp");
+}
+.hero__slide:nth-child(2) {
+  background-image: url("../../public/img/slider/GRPhoto2.webp");
+}
+.hero__slide:nth-child(3) {
+  background-image: url("../../public/img/slider/GRPhoto3.webp");
+}
+.hero__slide:nth-child(4) {
+  background-image: url("../../public/img/slider/GRPhoto4.webp");
+}
+.hero__slide.active {
+  opacity: 1;
+}
+.hero__progress {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 1rem;
+  width: 100%;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1001;
+}
+.hero__index {
+  border: 2px solid #FFFFFF;
+  border-radius: 50%;
+  background-color: #4CAF50;
+  width: 1rem;
+  height: 1rem;
+  margin: 0 5px;
+  opacity: 0.4;
+  transition: opacity 0.3s;
+}
+.hero__index.active {
+  opacity: 1;
+}
+
 .logoImg--nav {
   display: block;
   width: 6rem;
   height: auto;
 }
+.logoImg--hero {
+  display: block;
+  width: 8rem;
+  height: auto;
+}
 
+@media (min-width: 56.25em) {
+  .logoText__heroHeadingLineBreak {
+    display: none;
+  }
+}
 .footer {
   background-color: rgba(255, 69, 0, 0.5);
+}
+
+/* Hero Section */
+.hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  height: 100vh;
+  padding: 0 1rem;
+  margin-top: 1rem;
+  overflow: hidden;
+  position: relative;
+  /* Overlay for better text readability */
+  /* Hero Content */
+}
+@media (min-width: 37.5em) {
+  .hero {
+    padding-top: 3rem;
+  }
+}
+@media (min-width: 56.25em) {
+  .hero {
+    padding-top: 5rem;
+  }
+}
+.hero::before {
+  content: "";
+  background: rgba(0, 0, 0, 0.45); /* Dark overlay */
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.hero__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  background-color: rgba(240, 255, 255, 0.35);
+  border-radius: 0.6rem;
+  box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.35);
+  width: min(85%, 65rem);
+  padding: 2rem;
+  position: relative;
+  z-index: 2;
+}
+.hero__logoTextBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 0.25rem;
+}
+.hero__intro {
+  width: min(75%, 60rem);
+  margin-top: 1rem;
 }
 
 /* Basic styles for the navbar */
@@ -215,13 +397,13 @@ h6 {
   align-items: center;
   gap: 1rem;
   justify-content: space-between;
-  padding: 0.5rem 1rem 0.75rem 0.5rem;
   background-color: #FAF3E0; /* Light cream color */
-  min-height: 6rem;
+  padding: 0.5rem 1rem 0.75rem 0.5rem;
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
+  z-index: 1000;
   /* Hamburger Button Styles */
 }
 .nav__logoBox {
@@ -243,11 +425,11 @@ h6 {
 }
 .nav__hamburger {
   display: none;
-  cursor: pointer;
   flex-direction: column;
   justify-content: space-between;
-  width: 30px;
-  height: 25px;
+  width: 3rem;
+  height: 2.5rem;
+  cursor: pointer;
 }
 .nav__hamburger div {
   background-color: #2F3E46;
@@ -260,25 +442,27 @@ h6 {
 .nav__list {
   display: none;
   flex-direction: column;
+  align-items: center;
+  background-color: #2F3E46;
+  width: 100%;
+  padding: 5rem 1rem 1rem;
   position: absolute;
   top: 7.3rem;
   right: 0;
-  background-color: #2F3E46;
-  width: 100%;
-  text-align: center;
-  padding: 5rem 1rem 1rem;
 }
 
 .nav__list.show {
   display: flex;
+  min-height: 95vh;
 }
 
 .nav__hamburger {
   display: flex;
 }
 
+/* Hamburger Animation*/
 .nav__hamburger.open div:nth-child(1) {
-  transform: rotate(45deg) translate(5px, 10px);
+  transform: rotate(45deg) translate(0.5rem, 1rem);
 }
 
 .nav__hamburger.open div:nth-child(2) {
@@ -286,7 +470,7 @@ h6 {
 }
 
 .nav__hamburger.open div:nth-child(3) {
-  transform: rotate(-45deg) translate(5px, -10px);
+  transform: rotate(-45deg) translate(0.5rem, -1rem);
 }
 
 /* Tablet Portrait */
@@ -299,10 +483,12 @@ h6 {
     gap: 1rem;
     justify-content: flex-end;
     gap: 2.5rem;
-    top: 0;
-    height: 7rem;
     background-color: transparent;
     padding: 1rem;
+    position: fixed;
+    top: 1rem;
+    left: 0;
+    right: 0;
   }
   .nav__hamburger {
     display: none;
