--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,7 +1,23 @@
+@use "../abstracts/variables" as *;
+@use "../abstracts/mixins" as *;
+
 .logoImg {
   &--nav {
     display: block;
     width: 6rem;
     height: auto;
+  }
+  &--hero {
+    display: block;
+    width: 8rem;
+    height: auto;
+  }
+}
+
+@include respond(tab-land) {
+  .logoText {
+    &__heroHeadingLineBreak {
+      display: none;
+    }
   }
 }
