--- a/public/css/main.css
+++ b/public/css/main.css
@@ -325,6 +325,12 @@ h6 {
   opacity: 1;
 }
 
+.footer__socialMediaIcon {
+  display: block;
+  width: 5rem;
+  height: auto;
+}
+
 .logoImg--nav {
   display: block;
   width: 6rem;
@@ -344,6 +350,7 @@ h6 {
 /* Footer Base Styles */
 .footer {
   background: #2F3E46; /* Dark green */
+  /* Social Media Styles*/
   /* Copyright Styles */
   /* Developer Credit Styles */
 }
@@ -353,6 +360,22 @@ h6 {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+}
+.footer__socialMediaBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 3rem;
+}
+.footer__socialMediaLink {
+  box-shadow: 0px 0px 6px 3px rgba(47, 62, 70, 0.45);
+  transition: all 0.3s;
+}
+.footer__socialMediaLink:hover {
+  box-sizing: 0px 6px 35px 3px rgba(47, 62, 70, 0.6);
+  transform: scale(1.1);
 }
 .footer__copyright {
   display: flex;
@@ -410,11 +433,6 @@ h6 {
 .footer__contact-item,
 .footer__copy {
   font-size: 14px;
-}
-
-.footer__social-link img {
-  width: 24px;
-  margin: 0 8px;
 }
 
 /* Hero Section */
