--- a/public/css/main.css
+++ b/public/css/main.css
@@ -325,6 +325,14 @@ h6 {
   opacity: 1;
 }
 
+.footer__contactItemIcon {
+  display: block;
+  width: 3rem;
+  height: auto;
+}
+.footer__contactItemIconColor {
+  fill: #ff9148;
+}
 .footer__socialMediaIcon {
   display: block;
   width: 5rem;
@@ -350,6 +358,7 @@ h6 {
 /* Footer Base Styles */
 .footer {
   background: #2F3E46; /* Dark green */
+  /* Contact Item Styles*/
   /* Social Media Styles*/
   /* Copyright Styles */
   /* Developer Credit Styles */
@@ -360,6 +369,25 @@ h6 {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+}
+.footer__contactBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 0.5rem;
+}
+.footer__contactItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 0.25rem;
+}
+.footer__contactItem:nth-Child(2) {
+  gap: 0.75rem;
 }
 .footer__socialMediaBox {
   display: flex;
@@ -428,11 +456,6 @@ h6 {
 
 .footer__nav-link:hover {
   text-decoration: underline;
-}
-
-.footer__contact-item,
-.footer__copy {
-  font-size: 14px;
 }
 
 /* Hero Section */
