change styling of footer logo and nav

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -109,6 +109,9 @@ ORDER: base + typography > general layout + grid > page layout > components
   text-align: center;
   text-shadow: 1px 1px 1px #2f3e46;
 }
+.logoText--sloganFooter {
+  color: rgba(255, 255, 255, 0.85);
+}
 
 .hero__intro {
   color: rgba(255, 255, 255, 0.85);
@@ -119,6 +122,11 @@ ORDER: base + typography > general layout + grid > page layout > components
 
 .footer {
   color: rgba(255, 255, 255, 0.75);
+}
+.footer__navLink {
+  font-size: clamp(1.6rem, 5.5vw, 1.8rem);
+  font-weight: 700;
+  text-shadow: 1px 1px 1px #2f3e46;
 }
 .footer__copyrightBox {
   line-height: 1;
@@ -349,6 +357,11 @@ h6 {
   width: 8rem;
   height: auto;
 }
+.logoImg--footer {
+  display: block;
+  width: 8rem;
+  height: auto;
+}
 
 @media (min-width: 56.25em) {
   .logoText__heroHeadingLineBreak {
@@ -358,6 +371,7 @@ h6 {
 /* Footer Base Styles */
 .footer {
   background: #2F3E46; /* Dark green */
+  /* Footer Logo*/
   /* Contact Item Styles*/
   /* Social Media Styles*/
   /* Copyright Styles */
@@ -369,6 +383,17 @@ h6 {
   justify-content: center;
   align-items: center;
   gap: 1rem;
+}
+.footer__logoBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 0;
+}
+.footer__logoTextBox {
+  margin-left: 0.25rem;
 }
 .footer__contactBox {
   display: flex;
@@ -625,6 +650,22 @@ h6 {
   .nav__hamburger {
     display: none;
   }
+}
+.footer__navList {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 0.5rem;
+}
+.footer__navLink {
+  border-radius: 0.4rem;
+  padding: 0.5rem 2rem;
+  transition: all 0.8s;
+}
+.footer__navLink:hover {
+  background-color: #ff9148;
 }
 
 /*# sourceMappingURL=main.css.map */
