--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,8 +4,15 @@
 /* Footer Base Styles */
 .footer {
   background: $dark-green; /* Dark green */
+  padding: 3rem 1rem 0rem;
   &__container {
     @include displayFlexColumn;
+    gap: 3rem;
+  }
+
+  &__logoAndNavBox {
+    @include displayFlexColumn;
+    gap: 3rem;
   }
   /* Footer Logo*/
   &__logoBox {
@@ -15,6 +22,11 @@
 
   &__logoTextBox {
     margin-left: 0.25rem;
+  }
+
+  &__contactAndSocialMediaBox {
+    @include displayFlexColumn;
+    gap: 3rem;
   }
 
   /* Contact Item Styles*/
@@ -48,6 +60,11 @@
     transform: scale(1.1);
   }
 
+  &__copyAndDevBox {
+    @include displayFlexColumn;
+    gap: 1rem;
+  }
+
   /* Copyright Styles */
   &__copyright {
     @include displayFlexRow;
@@ -78,32 +95,6 @@
     transform: scale(1.1);
   }
 }
-
-
-
-
-
-
-.footer__nav-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.footer__nav-item {
-  display: inline-block;
-  margin: 0 10px;
-}
-
-.footer__nav-link {
-  color: white;
-  text-decoration: none;
-}
-
-.footer__nav-link:hover {
-  text-decoration: underline;
-}
-
 
 // /* Desktop View */
 // @media (min-width: 768px) {
