--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,6 +47,33 @@ ORDER: base + typography > general layout + grid > page layout > components
   font-style: normal;
 }
 
+.headingH2, .headingH3 {
+  color: #FFFFFF;
+  font-family: "Quicksand", serif;
+  font-size: clamp(2.6rem, 6.5vw, 2.8rem);
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  letter-spacing: 3px;
+  text-shadow: 2px 2px 2px #2f3e46;
+  text-transform: uppercase;
+}
+
+.headingH2TagLine, .headingH3TagLine {
+  color: rgba(255, 255, 255, 0.95);
+  font-family: "Merriweather", serif;
+  font-size: clamp(1.2rem, 4.5vw, 1.4rem);
+  font-weight: 700;
+  font-style: normal;
+  text-shadow: 1px 1px 2px #2f3e46;
+  text-transform: capitalize;
+}
+
+.headingH3 {
+  color: rgba(255, 255, 255, 0.85);
+  font-size: clamp(1.8rem, 6vw, 2rem);
+}
+
 .nav__link {
   color: #FAF3E0;
   font-family: "Nunito", serif;
@@ -118,6 +145,22 @@ ORDER: base + typography > general layout + grid > page layout > components
   font-size: clamp(1.4rem, 5vw, 1.6rem);
   text-align: center;
   text-shadow: 1px 1px 1px #2f3e46;
+}
+
+.contact__paragraph, .testimonial__paragraph {
+  color: #2F3E46;
+  font-family: "Merriweather", serif;
+  font-size: clamp(1.4rem, 5vw, 1.6rem);
+  font-weight: 400;
+  font-style: normal;
+  text-align: left;
+}
+.contact__paragraph--contact, .testimonial__paragraph--contact {
+  color: #FFFFFF;
+  text-shadow: 1px 1px 2px #2f3e46;
+}
+.contact__customer, .testimonial__customer {
+  font-weight: 700;
 }
 
 .footer {
@@ -333,6 +376,20 @@ h6 {
   opacity: 1;
 }
 
+.contact__contactItemIcon {
+  display: block;
+  width: 3rem;
+  height: auto;
+}
+.contact__contactItemIconColor {
+  fill: #2F3E46;
+}
+.contact__socialMediaIcon {
+  display: block;
+  width: 5rem;
+  height: auto;
+}
+
 .footer__contactItemIcon {
   display: block;
   width: 3rem;
@@ -368,6 +425,25 @@ h6 {
     display: none;
   }
 }
+.testimonial {
+  background-color: #FAF3E0;
+  border-radius: 0.4rem;
+  box-shadow: 0 0 12px 4px rgba(0, 0, 0, 0.35);
+  padding: 1rem;
+  width: min(100%, 42rem);
+}
+.testimonial__img {
+  float: left;
+  object-fit: cover;
+  border: 2px solid #ff9148;
+  border-radius: 100%;
+  box-shadow: 2px 2px 12px 3px rgba(47, 62, 70, 0.35);
+  width: clamp(6rem, 18vw, 10rem);
+  height: clamp(6rem, 18vw, 10rem);
+  shape-outside: circle();
+  margin-right: 2rem;
+}
+
 /* Footer Base Styles */
 .footer {
   background: #2F3E46; /* Dark green */
@@ -533,7 +609,7 @@ h6 {
   gap: 1rem;
   background-color: rgba(240, 255, 255, 0.35);
   border-radius: 0.6rem;
-  box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.35);
+  box-shadow: 0 0 12px 4px rgba(0, 0, 0, 0.35);
   width: min(85%, 65rem);
   padding: 2rem;
   position: relative;
@@ -672,6 +748,87 @@ h6 {
 }
 .footer__navLink:hover {
   background-color: #ff9148;
+}
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 5rem;
+  background-color: #ff9148;
+  padding: 2rem 1rem;
+}
+.sidebar__testimonials {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 2rem;
+}
+.sidebar__contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 2rem;
+}
+
+.contact {
+  /* Contact Item Styles*/
+}
+.contact__contactAndSocialMediaBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 3rem;
+}
+.contact__contactBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 0.5rem;
+}
+.contact__contactItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 0.25rem;
+}
+.contact__contactItem:nth-child(2) {
+  gap: 0.75rem;
+}
+.contact__socialMediaBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 1rem;
+}
+.contact__socialMediaIconsBox {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  gap: 3rem;
+}
+.contact__socialMediaLink {
+  transition: all 0.3s;
+}
+.contact__socialMediaLink:hover {
+  box-sizing: 0px 6px 35px 3px rgba(47, 62, 70, 0.6);
+  transform: scale(1.1);
 }
 
 /*# sourceMappingURL=main.css.map */
