--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -41,6 +41,33 @@
   font-style: normal;
 }
 
+.headingH2, .headingH3 {
+  color: $white;
+  font-family: "Quicksand", serif;
+  font-size: clamp(2.6rem, 6.5vw, 2.8rem);
+  font-optical-sizing: auto;
+  font-weight: 700;
+  font-style: normal;
+  letter-spacing: 3px;
+  text-shadow: 2px 2px 2px rgba($dark-green, 1);
+  text-transform: uppercase;
+}
+
+.headingH2TagLine, .headingH3TagLine {
+  color: rgba($white, 0.95);
+  font-family: "Merriweather", serif;
+  font-size: clamp(1.2rem, 4.5vw, 1.4rem);
+  font-weight: 700;
+  font-style: normal;
+  text-shadow: 1px 1px 2px rgba($dark-green, 1);
+  text-transform: capitalize;
+}
+
+.headingH3 {
+  color: rgba($white, 0.85);
+  font-size: clamp(1.8rem, 6vw, 2rem);
+}
+
 .nav {
   &__link {
     color: $light-cream;
@@ -116,8 +143,26 @@
   }
 }
 
+.contact, .testimonial {
+  &__paragraph {
+    color: $dark-green;
+    font-family: "Merriweather", serif;
+    font-size: clamp(1.4rem, 5vw, 1.6rem);
+    font-weight: 400;
+    font-style: normal;
+    text-align: left;
+  }
+  &__paragraph--contact {
+    color: $white;
+    text-shadow: 1px 1px 2px rgba($dark-green, 1);
+  }
+  &__customer {
+    font-weight: 700;
+  }
+}
+
 .footer {
-  color: rgba($white, .75);
+  color: rgba($white, 0.75);
   &__navLink {
     font-size: clamp(1.6rem, 5.5vw, 1.8rem);
     font-weight: 700;
