--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -1,18 +1,33 @@
 @use "../abstracts/variables" as *;
 @use "../abstracts/mixins" as *;
 
+.contact {
+  &__contactItemIcon {
+    display: block;
+    width: 3rem;
+    height: auto;
+  }
+  &__contactItemIconColor {
+    fill: $dark-green;
+  }
+  &__socialMediaIcon {
+    display: block;
+    width: 5rem;
+    height: auto;
+  }
+}
 .footer {
-      &__contactItemIcon {
-            display: block;
-            width: 3rem;
-            height: auto;
-      }
-      &__contactItemIconColor {
-            fill: $accent-orange
-      }
-      &__socialMediaIcon {
-            display: block;
-            width: 5rem;
-            height: auto;
-      }
+  &__contactItemIcon {
+    display: block;
+    width: 3rem;
+    height: auto;
+  }
+  &__contactItemIconColor {
+    fill: $accent-orange;
+  }
+  &__socialMediaIcon {
+    display: block;
+    width: 5rem;
+    height: auto;
+  }
 }
